opravy vs.net author

--- a/SolutionToolbar/Resources/App.config
+++ b/SolutionToolbar/Resources/App.config
@@ -1,13 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="webAppUrl" value="http://blendedtest.langmaster.cz" />
-    <add key="homePage" value="schools/index_cs_cz.html" />
-    <!--<add key="webAppUrl" value="http://localhost/web4" />
-    <add key="homePage" value="schools/newea.aspx?lang=en-gb" />-->
-    <!--<add key="ftp.url" value="test.langmaster.com/alpha/rew/web4" />
-    <add key="ftp.user" value="deploy" />
-    <add key="ftp.password" value="deploy" />
-    <add key="ftp.dir" value="" />-->
+    <add key="webAppUrl" value="http://test.langmaster.com/edusofttest" />
+    <add key="homePage" value="Schools/index_en_gb.html" />
+    <add key="ftp.url" value="192.168.0.14" />
+    <add key="ftp.user" value="edusoft" />
+    <add key="ftp.password" value="edusoft123_" />
+    <add key="ftp.dir" value="" />
   </appSettings>
 </configuration>
