--- a/SolutionToolbar/Resources/PZApp.config
+++ b/SolutionToolbar/Resources/PZApp.config
@@ -1,4 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<!--<?xml version="1.0" encoding="utf-8"?>
+<configuration>
+  <appSettings>
+    <add key="webAppUrl" value="http://test.langmaster.com/edusofttest" />
+    <add key="homePage" value="Schools/index_en_gb.html" />
+    <add key="ftp.url" value="192.168.0.14" />
+    <add key="ftp.user" value="edusoft" />
+    <add key="ftp.password" value="edusoft123_" />
+    <add key="ftp.dir" value="" />
+  </appSettings>
+</configuration>-->
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
     <add key="webAppUrl" value="http://localhost/rew" />
