--- a/SolutionToolbar/Resources/PZApp.config
+++ b/SolutionToolbar/Resources/PZApp.config
@@ -1,4 +1,5 @@
-﻿<!--<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<!--
 <configuration>
   <appSettings>
     <add key="webAppUrl" value="http://test.langmaster.com/edusofttest" />
@@ -9,7 +10,6 @@
     <add key="ftp.dir" value="" />
   </appSettings>
 </configuration>-->
-<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
     <add key="webAppUrl" value="http://localhost/rew" />
