--- a/Web4/Web.ConnectionStrings.config
+++ b/Web4/Web.ConnectionStrings.config
@@ -7,10 +7,10 @@
   <!--<add name="Container" connectionString="Data Source=195.250.145.26\MSSQLSERVER,1433;initial catalog=blendedtest;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient" />
   <add name="Vyzva57" connectionString="Data Source=195.250.145.26\MSSQLSERVER,1433;initial catalog=blendedvyzvatest;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient" />-->
 
-  <add name="Container" connectionString="Data Source=195.250.145.26;initial catalog=Chinhtest;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest" providerName="System.Data.SqlClient" />
+  <!--<add name="Container" connectionString="Data Source=195.250.145.26;initial catalog=Chinhtest;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest" providerName="System.Data.SqlClient" />-->
 
-  <!--<add name="Container" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=NewLMCom;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;" providerName="System.Data.SqlClient" />
-  <add name="Vyzva57" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=Vyzva57;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;" providerName="System.Data.SqlClient" />-->
+  <add name="Container" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=NewLMCom;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;" providerName="System.Data.SqlClient" />
+  <add name="Vyzva57" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=Vyzva57;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;" providerName="System.Data.SqlClient" />
   
   <add name="AzureContainer" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=AzureLmcom;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;" providerName="System.Data.SqlClient" />
   <add name="ScormExNet35Container" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=NewLMCom;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;" providerName="System.Data.SqlClient" />
